@@ -21,27 +21,24 @@
 
 package io.crate.expression.scalar.arithmetic;
 
-import com.google.common.collect.ImmutableSet;
 import io.crate.data.Input;
 import io.crate.expression.scalar.ScalarFunctionModule;
 import io.crate.metadata.FunctionIdent;
 import io.crate.metadata.FunctionInfo;
-import io.crate.metadata.TransactionContext;
 import io.crate.metadata.Scalar;
+import io.crate.metadata.TransactionContext;
 import io.crate.types.DataType;
 import io.crate.types.DataTypes;
 
-import java.util.Arrays;
-import java.util.Set;
+import java.util.List;
+
+import static io.crate.metadata.functions.Signature.scalar;
+import static io.crate.types.TypeSignature.parseTypeSignature;
 
 public abstract class LogFunction extends Scalar<Number, Number> {
 
     public static final String NAME = "log";
-    private static final Set<DataType> ALLOWED_TYPES = ImmutableSet.<DataType>builder()
-        .addAll(DataTypes.NUMERIC_PRIMITIVE_TYPES)
-        .add(DataTypes.UNDEFINED)
-        .build();
-
+    private static final List<DataType> ALLOWED_TYPES = DataTypes.NUMERIC_PRIMITIVE_TYPES;
     protected final FunctionInfo info;
 
     public static void register(ScalarFunctionModule module) {
@@ -78,16 +75,20 @@ public abstract class LogFunction extends Scalar<Number, Number> {
 
         static void registerLogBaseFunctions(ScalarFunctionModule module) {
             // log(valueType, baseType) : double
-            for (DataType baseType : ALLOWED_TYPES) {
-                for (DataType valueType : ALLOWED_TYPES) {
-                    FunctionInfo info = new FunctionInfo(
-                        new FunctionIdent(
+            for (DataType<?> baseType : ALLOWED_TYPES) {
+                for (DataType<?> valueType : ALLOWED_TYPES) {
+                    module.register(
+                        scalar(
                             NAME,
-                            Arrays.asList(valueType, baseType)
-                        ),
-                        DataTypes.DOUBLE
+                            valueType.getTypeSignature(),
+                            baseType.getTypeSignature(),
+                            parseTypeSignature("double precision")),
+                        args -> new LogBaseFunction(
+                            new FunctionInfo(
+                                new FunctionIdent(NAME, List.of(valueType, baseType)), DataTypes.DOUBLE
+                            )
+                        )
                     );
-                    module.register(new LogBaseFunction(info));
                 }
             }
         }
@@ -120,9 +121,13 @@ public abstract class LogFunction extends Scalar<Number, Number> {
 
         static void registerLog10Functions(ScalarFunctionModule module) {
             // log(dataType) : double
-            for (DataType dt : ALLOWED_TYPES) {
-                FunctionInfo info = new FunctionInfo(new FunctionIdent(NAME, Arrays.asList(dt)), DataTypes.DOUBLE);
-                module.register(new Log10Function(info));
+            for (DataType<?> dt : ALLOWED_TYPES) {
+                module.register(
+                    scalar(NAME, dt.getTypeSignature(), parseTypeSignature("double precision")),
+                    args -> new Log10Function(
+                        new FunctionInfo(new FunctionIdent(NAME, List.of(dt)), DataTypes.DOUBLE)
+                    )
+                );
             }
         }
 
@@ -150,9 +155,13 @@ public abstract class LogFunction extends Scalar<Number, Number> {
 
         static void registerLnFunctions(ScalarFunctionModule module) {
             // ln(dataType) : double
-            for (DataType dt : ALLOWED_TYPES) {
-                FunctionInfo info = new FunctionInfo(new FunctionIdent(LnFunction.NAME, Arrays.asList(dt)), DataTypes.DOUBLE);
-                module.register(new LnFunction(info));
+            for (DataType<?> dt : ALLOWED_TYPES) {
+                module.register(
+                    scalar(LnFunction.NAME, dt.getTypeSignature(), parseTypeSignature("double precision")),
+                    args -> new LnFunction(
+                        new FunctionInfo(new FunctionIdent(NAME, List.of(dt)), DataTypes.DOUBLE)
+                    )
+                );
             }
         }
 
